exports[`Tile render tests should render correctly given correct prop 1`] = `
<div
  className="esNDqL"
  onClick={[Function]}>
  <span
    className="tile-number">
    0
  </span>
</div>
`;

exports[`Tile render tests should render correctly given custom number 1`] = `
<div
  className="imABQe"
  onClick={[Function]}>
  <span
    className="tile-number">
    13
  </span>
</div>
`;

exports[`Tile render tests should render correctly given default number 1`] = `
<div
  className="iFsnCz"
  onClick={[Function]}>
  <span
    className="tile-number">
    0
  </span>
</div>
`;

exports[`Tile render tests should render correctly given visible prop 1`] = `
<div
  className="jVZYxz tile-invisible"
  onClick={[Function]}>
  <span
    className="tile-number">
    0
  </span>
</div>
`;
